fix croppie

--- a/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
+++ b/public/assets/scss/pages/logged-in/dentist/_dentist-create-contract.scss
@@ -113,7 +113,6 @@
             &.one {
                 display: block;
                 .avatar {
-                    width: 150px;
                     margin: 0 auto;
                 }
             }
